# Reveal-AI

./: .gitignore  EfficientNet_Chameleon.ipynb  README.md  chameleon_clip_vit.ipynb  chameleon_convnext_tiny.ipynb  chameleon_efficientnet_b0.ipynb  notebook.ipynb  pyproject.toml  sampled_clip_vit.ipynb  sampled_convnext_tiny.ipynb  sampled_efficientnet_b0.ipynb  spai_notebook.ipynb  spai_starter.sh
EfficientNet-Sistata/: EfficientNet_Cropped.ipynb  EfficientNet_Scaled.ipynb  EfficientNet_unmodified.ipynb
Experiments-JT/Clip-Vit Cropped/: sampled_clip_vit.ipynb  sampled_clip_vit.yaml
Experiments-JT/Clip-Vit Scaled-BiCubic/: sampled_clip_vit.ipynb  sampled_clip_vit.yaml
Experiments-JT/Clip-Vit Scaled-BiLinear/: sampled_clip_vit.ipynb  sampled_clip_vit.yaml
Experiments-JT/Clip-Vit Scaled-Lan/: sampled_clip_vit.ipynb
Experiments-JT/Clip-Vit Standard/: sampled_clip_vit.ipynb  sampled_clip_vit.yaml
Experiments-JT/ConvNext Cropped/: sampled_convnext_tiny.ipynb  sampled_convnext_tiny.yaml
Nigele_Final_Code/: Color_Analysis_Standard.ipynb  Color_Analysis_cropped.ipynb  Color_Analysis_scaled.ipynb  Cropped_Models.ipynb  Nigele_Models_revamped.ipynb  Scaled_Models.ipynb  resnet_shuffle_cropped_test_acc_2.ipynb  resnet_shuffle_scaled_test_acc.ipynb  resnet_shufflenet_standard.ipynb  resnet_standard_test_acc.ipynb
Nigele_starter_code/: Nigele_models.ipynb  Nigele_notebook.ipynb  Nigele_notebook_convnext_tiny.ipynb  Nigele_notebook_resnet50.ipynb  Nigele_notebook_resnet50_3.ipynb  Nigele_notebook_vit.ipynb
data_sampling/: Make_Samples.ipynb
src/: main.py  train.py
(+97 files in other folders)
