[project]
name = "reveal-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "lightning>=2.5.6",
    "pyyaml>=6.0.3",
    "timm>=1.0.22",
    "torch>=2.6.0",
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
    "notebook>=7.4.7",
    "ruff>=0.14.4",
    "uv>=0.9.8",
]
